--- a/app/src/main/res/layout/activity_libras_gramos.xml
+++ b/app/src/main/res/layout/activity_libras_gramos.xml
@@ -4,56 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AreaTActivity">
+    android:backgroundTint="#FFC107"
+    tools:context=".LibrasGramosActivity">
 
     <LinearLayout
-        android:layout_width="405dp"
-        android:layout_height="597dp"
+        android:layout_width="394dp"
+        android:layout_height="579dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ingresa la base" />
+            android:text="Indroducir libras:" />
 
         <EditText
-            android:id="@+id/editTextNumberXA"
+            android:id="@+id/editTextNumberX"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ingresa la altura" />
+            android:text="Gramos:" />
 
         <EditText
-            android:id="@+id/editTextNumberYA"
+            android:id="@+id/editTextNumberTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Resultado " />
-
-        <EditText
-            android:id="@+id/editTextNumberTotalA"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number" />
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>a
+</androidx.constraintlayout.widget.ConstraintLayout>
